@@ -1,5 +1,9 @@
 2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* lib/prototypes.h: Fix the prototypes to match earlier changes.
+
+2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* lib/nscd.c: Include defines.h.
 	* lib/nscd.c: Always warn when the nscd cache cannot be flushed.
 	* lib/nscd.c: Avoid assignments in comparisons.
